css/main.css
/* ... */
.skill-bars li .percent45 {
  width: 45%;
}

.skill-bars li .percent50 {
  width: 50%;
}

.skill-bars li .percent55 {
  width: 55%;
}

.skill-bars li .percent60 {
  width: 60%;
}

.skill-bars li .percent65 {
  width: 65%;
}

.skill-bars li .percent70 {
  width: 70%;
}

.skill-bars li .percent75 {
  width: 75%;
}

.skill-bars li .percent80 {
  width: 80%;
}

.skill-bars li .percent85 {
  width: 85%;
}

.skill-bars li .percent90 {
  width: 90%;
}

.skill-bars li .percent95 {
  width: 95%;
}

.skill-bars li .percent100 {
  width: 100%;
}

/* ------------------------------------------------------------------- 
 * ## alert box 
 * ------------------------------------------------------------------- */
.alert-box {
  padding: 2.4rem 4rem 2.4rem 3.2rem;
  position: relative;
  margin-bottom: 3.2rem;
  border-radius: 3px;
  font-family: "Roboto", sans-serif;
  font-weight: 600;
  font-size: 1.5rem;
  line-height: 1.6;
}

.alert-box__close {
  position: absolute;
  display: block;
  right: 1.6rem;
  top: 1.6rem;
  cursor: pointer;
  width: 12px;
  height: 12px;
}

.alert-box__close::before,
.alert-box__close::after {
  content: '';
  position: absolute;
  display: inline-block;
  width: 2px;
  height: 12px;
  top: 0;
  left: 5px;
}

.alert-box__close::before {
  -webkit-transform: rotate(45deg);
  transform: rotate(45deg);
}

.alert-box__close::after {
  -webkit-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.alert-box--error {
  background-color: #ffd1d2;
  color: #dd4043;
}

.alert-box--error .alert-box__close::before,
.alert-box--error .alert-box__close::after {
  background-color: #dd4043;
}

.alert-box--success {
  background-color: #c8e675;
  color: #637533;
}

.alert-box--success .alert-box__close::before,
.alert-box--success .alert-box__close::after {
  background-color: #637533;
}

.alert-box--info {
  background-color: #d5ebfb;
  color: #387fb2;
}

.alert-box--info .alert-box__close::before,
.alert-box--info .alert-box__close::after {
  background-color: #387fb2;
}

.alert-box--notice {
  background-color: #fff099;
  color: #827217;
}

.alert-box--notice .alert-box__close::before,
.alert-box--notice .alert-box__close::after {
  background-color: #827217;
}

/* -------------------------------------------------------------------
 * ## pagination 
 * ------------------------------------------------------------------- */
.pgn {
  margin: 3.2rem auto;
  text-align: center;
}

.pgn ul {
  display: inline-block;
  list-style: none;
  margin-left: 0;
  position: relative;
  padding: 0 6rem;
}

.pgn ul li {
  display: inline-block;
  margin: 0;
  padding: 0;
}

.pgn__num {
  font-family: "Lora", serif;
  font-weight: 700;
  font-size: 1.7rem;
  line-height: 3.2rem;
  display: inline-block;
  padding: .2rem 1.2rem;
  height: 3.6rem;
  margin: .2rem .2rem;
  color: #000000;
  border-radius: 4px;
  transition: all, .3s, ease-in-out;
}

.pgn__num:hover {
  background: #d3d3d3;
  color: #000000;
}

.pgn .current,
.pgn .current:hover {
  background-color: #f52525;
  color: white;
}

.pgn .inactive,
.pgn .inactive:hover {
  opacity: 0.4;
  cursor: default;
}

.pgn__prev,
.pgn__next {
  display: block;
  background-repeat: no-repeat;
  background-size: 24px 11px;
  background-position: center;
  height: 3.6rem;
  width: 4.8rem;
  line-height: 2rem;
  border-radius: 3px;
  padding: 0;
  margin: 0;
  opacity: 1;
  font: 0/0 a;
  text-shadow: none;
  color: transparent;
  transition: all, .2s, ease-in-out;
  position: absolute;
  top: 50%;
  -webkit-transform: translate3d(0, -50%, 0);
  transform: translate3d(0, -50%, 0);
}

.pgn__prev:hover,
.pgn__next:hover {
  background-color: #d3d3d3;
}

.pgn__prev {
  background-image: url("../images/icons/icon-arrow-left.svg");
  left: 0;
}

.pgn__next {
  background-image: url("../images/icons/icon-arrow-right.svg");
  right: 0;
}

.pgn__prev.inactive,
.pgn__next.inactive {
  opacity: 0.4;
  cursor: default;
}

.pgn__prev.inactive:hover,
.pgn__next.inactive:hover {
  background-color: transparent;
}

/* ------------------------------------------------------------------- 
 * responsive:
 * pagination
 * ------------------------------------------------------------------- */
@media screen and (max-width:600px) {
  .pgn ul {
    padding: 0 5.2rem;
  }

}



/* ===================================================================
 * # Common and Reusable Styles
 *
 * ------------------------------------------------------------------- */
.wide {
  max-width: 1400px;
}

.narrow {
  max-width: 1000px;
}

.heading-block {
  position: relative;
}

.heading-block--center {
  max-width: 940px;
  text-align: center;
}

.section-heading {
  font-family: "Bebas Neue", cursive;
  font-size: 12rem;
  line-height: 1.176;
  text-transform: uppercase;
  letter-spacing: .5rem;
  margin-top: 0;
  padding-top: 1.6rem;
  margin-bottom: 12rem;
  position: relative;

  color: #ffffff;
}

.section-heading::before {
  content: "";
  display: block;
  width: 250px;
  height: 3px;
  background-color: #f52525;
  position: absolute;
  top: 0;
  left: 0;
}

.section-heading--centerbottom {
  text-align: center;
  padding-top: 0;
  padding-bottom: 3.2rem;
}

.section-heading--centerbottom::before {
  margin-left: -75px;
  top: auto;
  bottom: 0;
  left: 50%;
}

.section-desc {
  font-family: "IBM Plex Mono", monospace;
  font-size: 4.5rem;
  font-weight: 100;
  line-height: 1.259;
  letter-spacing: 0.05rem;
  color: #ffffff;
  
}

.item-title {
  font-family: "Bebas Neue", cursive;
  font-size: 3.6rem;
  font-weight: 500;
  line-height: 1.222;
  margin-top: 0;
  color: #ffffff;
}

.ss-dark .section-heading,
.ss-dark .section-desc {
  color: #ffffff;
}

/* ------------------------------------------------------------------- 
 * responsive:
 * common and reusable styles
 * ------------------------------------------------------------------- */
@media screen and (max-width:1200px) {
  .item-title {
    font-size: 3rem;
  }

}
/* ... */

